--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "devDependencies": {
     "express": "~4.4.1",
     "body-parser": "~1.3.0",
-    "mocha": "~1.20.1",
-    "underscore": "~1.6.0"
+    "mocha": "~1.20.1"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "restler": "~3.2.0"
   }
 }
